# swarm-compute

./: Cargo.toml  README.md
src/: main.rs  slave.rs  swarm.rs
