[package]
name = "swarm-compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmdns = "*"
mdns = "*"
tokio = { version = "*", features = ['full'] }
futures-util = "*"
serde = { version = "1.0", features = ["derive"] }
bincode = "*"
serde_traitobject = "*"
serde_closure = "*"
